--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Eilam Shapira"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "PhD Student @ Technion"
   location         : "Haifa, Israel"
   employer         :
