move to al-folio

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+theme: al-folio
+
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
