move to al-folio

--- a/_config.yml
+++ b/_config.yml
@@ -311,8 +311,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Shapira]
+  first_name: [Eilam, E.]
 
   style: apa
   locale: en
