create project pages

--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,7 @@ collections:
     output: true
     permalink: /:collection/:title/
   projects:
-    output: false
+    output: true
     permalink: /:collection/:title/
 
 announcements:
