--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,10 +3,10 @@
   contents:
     - name: Full Name
       value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+#    - name: Date of Birth
+#      value: 14th March 1879
     - name: Languages
-      value: English, German
+      value: English, Hebrew
 
 - title: Education
   type: time_table
