--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Contact me at <firstname>.<lastname> [at] gmail [dot] com
+  Contact me at \<firstname\>.\<lastname\> [at] gmail [dot] com
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
