resume teaching fixing

--- a/_config.yml
+++ b/_config.yml
@@ -636,7 +636,8 @@ jsonresume:
   - basics
   - work
   - education
-  - publications
+  - education
+  - teaching
   - projects
   - volunteer
   - awards
