--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Eilam
 last_name: Shapira
-#email: eilam.shapira@gmail.com
+email: me@eilamshapira.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Eilam Shapira | NLP, LLMs, and strategic thinking enthusiast. PhD Candidate @ Technion.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
