--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Blog # blog_name will be displayed in your blog page
-blog_description: My personal blog 
+blog_description: Some of my thoughts.
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -303,8 +303,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["Economics", "LLMs", "Language-based Games"] # these tags will be displayed on the front page of your blog
+display_categories: ["Research"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
