blog changes + EMNLP2024

--- a/_config.yml
+++ b/_config.yml
@@ -203,7 +203,7 @@ announcements:
   limit:  # leave blank to include all the news in the `_news` folder
 
 latest_posts:
-  enabled: false
+  enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 3 # leave blank to include all the blog posts
 
@@ -347,7 +347,7 @@ enable_publication_badges:
 filtered_bibtex_keywords:
   [
     abbr,
-    abstract,
+    # abstract,
     additional_info,
     altmetric,
     annotation,
